// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewTemplate component matches not yet submitted snapshot 1`] = `
<DocumentFragment>
  <h1
    class="review__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <div
      class="preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template ID
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          template-id
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Type
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          Channel template
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Status
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <strong
            class="nhsuk-tag"
          >
            Not yet submitted
          </strong>
        </div>
      </div>
    </div>
    <div
      class="nhsuk-u-margin-top-4 preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
            data-testid="preview__heading-0"
            id="preview-heading-heading"
          >
            Heading
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <div
            class="preview__col_content"
            data-testid="preview__content-0"
            id="preview-content-heading"
          >
            Test value-1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplate component matches submitted snapshot 1`] = `
<DocumentFragment>
  <h1
    class="review__heading"
    data-testid="preview-message__heading"
  >
    Example template
  </h1>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <div
      class="preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Template ID
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          template-id
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Type
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          Channel template
        </div>
      </div>
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
          >
            Status
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
          >
            Submitted
          </strong>
        </div>
      </div>
    </div>
    <div
      class="nhsuk-u-margin-top-4 preview"
    >
      <div
        class="nhsuk-grid-row preview__row"
      >
        <div
          class="nhsuk-grid-column-one-third preview__col"
        >
          <div
            class="preview__col_heading"
            data-testid="preview__heading-0"
            id="preview-heading-heading"
          >
            Heading
          </div>
        </div>
        <div
          class="nhsuk-grid-column-two-thirds col"
        >
          <div
            class="preview__col_content"
            data-testid="preview__content-0"
            id="preview-content-heading"
          >
            Test value-1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
